--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "firebase-app-hosting-nextjs",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
+    "hevy-client": "^0.2.2",
     "next": "^15.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
