--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "firebase": "^10.7.1",
     "firebase-admin": "^11.11.1",
     "hevy-client": "^0.2.2",
+    "lucide-react": "^0.540.0",
     "next": "^15.4.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
