--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -7,17 +7,22 @@ runConfig:
   # cpu: 1
   # memoryMiB: 512
 
-# Environment variables and secrets.
+  # Environment variables and secrets.
 env:
   # Configure environment variables.
   # See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment.
-  - variable: MESSAGE
-    value: Hello world!
+
+  # Base URL for the application (replace with your actual App Hosting URL)
+  - variable: NEXT_PUBLIC_BASE_URL
+    value: https://hevier-app-hosting.web.app
     availability:
       - BUILD
       - RUNTIME
 
-  # Configure secrets
-  # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
-  # - variable: API_KEY
-  #   secret: myApiKeySecret
+  # Development/testing flag
+  - variable: DRY_RUN
+    value: "false"
+    availability:
+      - RUNTIME
+  - variable: HEVY_API_TOKEN
+    secret: hevy-api-token
